[gd_scene load_steps=13 format=2]

[ext_resource path="res://UI/replay_btn.png" type="Texture" id=1]
[ext_resource path="res://fonts/Foldit/static/Foldit-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/menu_icon128.png" type="Texture" id=3]
[ext_resource path="res://icons8-money-bag-94.png" type="Texture" id=4]
[ext_resource path="res://ResultScreen.gd" type="Script" id=5]
[ext_resource path="res://fonts/swanston/Swanston-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://icons8-nut-94.png" type="Texture" id=7]

[sub_resource type="Gradient" id=9]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )
width = 1

[sub_resource type="GradientTexture" id=11]
width = 1

[sub_resource type="DynamicFont" id=12]
size = 36
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=13]
size = 30
font_data = ExtResource( 2 )

[node name="ResultScreen" type="Node2D"]
script = ExtResource( 5 )

[node name="Bg" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.654902 )
position = Vector2( 293, 513 )
scale = Vector2( 800, 1200 )
texture = SubResource( 10 )
normal_map = SubResource( 11 )

[node name="Popup" type="Control" parent="."]
margin_left = 102.0
margin_top = 364.0
margin_right = 142.0
margin_bottom = 404.0

[node name="Panel" type="Panel" parent="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.0
margin_top = -22.0
margin_right = 378.0
margin_bottom = 278.0
rect_min_size = Vector2( 400, 300 )

[node name="Success" type="Control" parent="Popup"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="MessageLabel" type="Label" parent="Popup/Success"]
margin_left = -2.0
margin_top = 15.0
margin_right = 398.0
margin_bottom = 52.0
custom_colors/font_color = Color( 0.427451, 1, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "You rock!"
align = 1

[node name="ScoreLabel" type="Label" parent="Popup/Success"]
margin_left = -1.0
margin_top = 59.0
margin_right = 399.0
margin_bottom = 95.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 13 )
text = "3000000"
align = 1
clip_text = true

[node name="ProgressLevelC" type="Node2D" parent="Popup/Success"]
position = Vector2( 97, 159 )

[node name="Sprite1" type="Sprite" parent="Popup/Success/ProgressLevelC"]
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="Popup/Success/ProgressLevelC"]
position = Vector2( 100, 0 )
texture = ExtResource( 4 )

[node name="Sprite3" type="Sprite" parent="Popup/Success/ProgressLevelC"]
position = Vector2( 200, 0 )
texture = ExtResource( 4 )

[node name="Fail" type="Control" parent="Popup"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="MessageLabel" type="Label" parent="Popup/Fail"]
margin_left = -2.0
margin_top = 15.0
margin_right = 398.0
margin_bottom = 52.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "Try again?"
align = 1

[node name="Sprite" type="Sprite" parent="Popup/Fail"]
position = Vector2( 189, 135 )
texture = ExtResource( 7 )

[node name="MenuBtn" type="Button" parent="Popup"]
margin_left = 101.0
margin_top = 219.0
margin_right = 161.0
margin_bottom = 279.0
rect_min_size = Vector2( 60, 60 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true
expand_icon = true

[node name="ReplayBtn" type="Button" parent="Popup"]
margin_left = 225.0
margin_top = 219.0
margin_right = 285.0
margin_bottom = 279.0
rect_min_size = Vector2( 60, 60 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 1 )
flat = true
expand_icon = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="Popup/MenuBtn" to="." method="_on_MenuBtn_pressed"]
[connection signal="pressed" from="Popup/ReplayBtn" to="." method="_on_ReplayBtn_pressed"]
